@@ -3,10 +3,10 @@ package avion;
 import com.sun.net.httpserver.HttpServer;
 import com.sun.net.httpserver.HttpExchange;
 
-import java.io.InputStream;
 import java.io.OutputStream;
 import java.net.InetSocketAddress;
-import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 
 public class Publicador {
 
@@ -16,54 +16,34 @@ public class Publicador {
 
             server.createContext("/AvionService", (HttpExchange exchange) -> {
 
-                if ("POST".equalsIgnoreCase(exchange.getRequestMethod())) {
+                // Si piden ?wsdl
+                if ("GET".equals(exchange.getRequestMethod())
+                        && exchange.getRequestURI().getQuery() != null
+                        && exchange.getRequestURI().getQuery().equalsIgnoreCase("wsdl")) {
 
-                    InputStream is = exchange.getRequestBody();
-                    String xml = new String(is.readAllBytes(), StandardCharsets.UTF_8);
+                    byte[] wsdl = Files.readAllBytes(
+                            Paths.get("AvionService.wsdl")
+                    );
 
-                    // Extraer datos simples del SOAP (enfoque académico)
-                    String modelo = extraer(xml, "modelo");
-                    String fabricante = extraer(xml, "fabricante");
-                    int capacidad = Integer.parseInt(extraer(xml, "capacidad"));
-                    int autonomia = Integer.parseInt(extraer(xml, "autonomia"));
-
-                    // Persistencia en Oracle
-                    Avion avion = new Avion(modelo, fabricante, capacidad, autonomia);
-                    AvionDAO dao = new AvionDAO();
-                    dao.registrarAvion(avion);
-
-                    // Respuesta SOAP
-                    String response =
-                            "<soapenv:Envelope xmlns:soapenv=\"http://schemas.xmlsoap.org/soap/envelope/\">" +
-                                    "<soapenv:Body>" +
-                                    "<return>Avión registrado correctamente en Oracle 19c</return>" +
-                                    "</soapenv:Body>" +
-                                    "</soapenv:Envelope>";
-
-                    exchange.getResponseHeaders().add("Content-Type", "text/xml; charset=utf-8");
-                    exchange.sendResponseHeaders(200, response.length());
-
+                    exchange.getResponseHeaders().add("Content-Type", "text/xml");
+                    exchange.sendResponseHeaders(200, wsdl.length);
                     OutputStream os = exchange.getResponseBody();
-                    os.write(response.getBytes(StandardCharsets.UTF_8));
+                    os.write(wsdl);
                     os.close();
+                    return;
                 }
+
+                exchange.sendResponseHeaders(405, -1);
             });
 
             server.start();
 
-            System.out.println("Servicio SOAP publicado SIN JAX-WS");
-            System.out.println("Endpoint:");
-            System.out.println("http://localhost:8080/AvionService");
+            System.out.println("Servicio SOAP activo");
+            System.out.println("WSDL disponible en:");
+            System.out.println("http://localhost:8080/AvionService?wsdl");
 
         } catch (Exception e) {
             e.printStackTrace();
         }
-    }
-
-    private static String extraer(String xml, String tag) {
-        return xml.substring(
-                xml.indexOf("<" + tag + ">") + tag.length() + 2,
-                xml.indexOf("</" + tag + ">")
-        );
     }
 }
